src/main/java/com/example/wth_app/error/CityNotFoundException.java
package com.example.wth_app.error;

public class CityNotFoundException extends RuntimeException {
    public CityNotFoundException(String message) {
        super(message);
    }
}
